started styling aboutus page. Finished with mobile and tablet.

--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -31,20 +31,142 @@
     <a id="up" href="#header"><img src="../images/up-arrow-circle.png" alt="up arrow icon"></a>
 
     <main>
+        <img src="https://popmenucloud.com/cdn-cgi/image/width=1200,height=1200,fit=scale-down,format=auto,quality=60/zeaxdpym/2977d71d-d4fe-4e10-afb9-4825d476f2e8.jpg"
+            alt="family of Okotoks Pizza owners">
         <div class="history_container">
             <article>
-                <h3>History</h3>
-                <p>Ken and Elaine Spinato opened their first pizzeria after moving from Chicago to Phoenix with their
-                    infant daughter Nicole in 1974. Within a year, their son Anthony was born. Over the next 40 years,
-                    Spinato's grew through word-of-mouth thanks to our authentic Italian flavors and family atmosphere.
-                    Every guest was (and still is) treated like a member of the family, focusing on the guest to provide
-                    the food and the ambiance that inspired a family legacy.</p>
-
+                <div>
+                    <h3>HISTORY</h3>
+                    <p>Ken and Elaine Spinato opened their first pizzeria after moving from Chicago to Phoenix with
+                        their
+                        infant daughter Nicole in 1974. Within a year, their son Anthony was born. Over the next 40
+                        years,
+                        Spinato's grew through word-of-mouth thanks to our authentic Italian flavors and family
+                        atmosphere.
+                        Every guest was (and still is) treated like a member of the family, focusing on the guest to
+                        provide
+                        the food and the ambiance that inspired a family legacy.</p>
+                </div>
                 <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/b1ab8a73-ebac-41a8-bb7a-98c373235a4e.jpg"
                     alt="Photo of Okotoks Pizza owner">
             </article>
-            <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/bc3ce265-e604-4d5f-9aeb-c4aab7a32855.JPG"
-                alt="commercial dough mixer with dough inside">
+            <div class="bg_image_container">
+                <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/bc3ce265-e604-4d5f-9aeb-c4aab7a32855.JPG"
+                    alt="commercial dough mixer with dough inside"> -->
+            </div>
+        </div>
+
+        <div class="recipe_container">
+            <article>
+                <div>
+                    <h3>RECIPE WITH ROOTS</h3>
+                    <p>Since 1974, our family has been Growing Good together by cooking together, challenging each
+                        other's
+                        dishes, and constantly experimenting and innovating.
+
+                        We don't just pass down the last generation's secrets; each generation improves upon them in our
+                        Family Kitchen. We love sharing our family favorites and invite you to do the same. With you in
+                        mind, our family has been working with recipes to create something that everyone at the table
+                        can
+                        enjoy. Come join the new generation of Okotoks's pizza makers in our mission of providing
+                        exceptional food and service for our community to build memories! We can't wait to connect with
+                        you!
+                    </p>
+                </div>
+                <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/c08a2d60-0857-47a1-b190-3ab4936ead94.jpg"
+                    alt="old photo of Okotoks Pizza owner when he was younger">
+            </article>
+            <div class="bg_image_container">
+                <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=960,height=960,fit=scale-down,format=auto,quality=60/zeaxdpym/2625f15d-b1a7-411b-bf78-706aeb265e9c.JPG" -->
+                <!-- alt="picture of raw cookie dough in egg shaped lumps"> -->
+            </div>
+        </div>
+
+        <div class="kitchen_container">
+            <article>
+                <div class="youtube">
+                    <iframe src="https://www.youtube-nocookie.com/embed/Vu9cWMQ9sWg?controls=0"
+                        style="width:100%;height:100%;" title="YouTube video player" frameborder="0" height="100%"
+                        width="100%"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div>
+                <h3>OUR SCRATCH KITCHEN!</h3>
+                <p>This is our Okotoks Pizza's Family Kitchen, or better known as our scratch kitchen. It's where it ALL
+                    happens...sauce, dough, desserts. We make it here and then we deliver it to all 5 locations. This
+                    helps
+                    to insure the same great taste and quality at all our locations.</p>
+                </div>    
+            </article>
+            <div class="bg_image_container">
+                <!-- <img src="https://images.unsplash.com/photo-1599875953199-2b39f58d106a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=773&q=80" -->
+                <!-- alt="wood burning in a pizza over"> -->
+            </div>
+        </div>
+
+        <div class="staff">
+            <div class="title">
+                <div class="title_text">
+                    <h4>OUR TEAM CAN'T BE TOPPED!</h4>
+                    <p> It's More Than A Job.</p>
+                </div>
+                <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/94d531ab-7c41-4128-bcdd-a29182721324.jpg" -->
+                <!-- alt="photo of Okotoks Pizza staff"> -->
+            </div>
+            <div class="article">
+                <div>
+                    <p> We treat every person on our team like family (that's why we call them family members) and honor
+                        each
+                        guest
+                        like they're in our own home. By working here, you become part of an amazing team that lifts
+                        each
+                        other
+                        up
+                        to provide a warm, welcoming experience for everyone who walks through our doors.</p>
+                </div>
+
+                <div class="photo_carousel">
+                    <img src="https://images.unsplash.com/photo-1594394206930-67339d922f8e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2070&q=80"
+                        alt="chef putting pizza into stone pizza oven">
+                    <img src="https://images.unsplash.com/photo-1550401728-539ebf40d9e9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
+                        alt="pizza toppings being added onto pizza dough">
+                    <img src="https://images.unsplash.com/photo-1630258053333-52b52cc2650d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
+                        alt="chef stretching and preparing the dough">
+                </div>
+                <div class="message_left">
+                    <p> We're here to enhance the lives of others and want family members who share our values-whether
+                        you're
+                        looking for a great place to spend a few years while at school, or seeking a long-term career
+                        with
+                        growth
+                        potential. There's a reason many of our management members started as part-time servers, cooks
+                        or
+                        hosts.</p>
+                </div>
+                <div class="photo_carousel">
+                    <img src="https://images.unsplash.com/photo-1494346480775-936a9f0d0877?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2016&q=80"
+                        alt="picture of busy Restaurant">
+                    <img src="https://images.unsplash.com/photo-1535852843010-69202d34cc6f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1974&q=80"
+                        alt="pizza neon sign on a brick wall">
+                    <img src="https://images.unsplash.com/photo-1560202212-441ad59100fd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3773&q=80"
+                        alt="2 rows of pizza in a food warmer">
+                </div>
+                <div class="message_right">
+                    <p> We're here to enhance the lives of others and want family members who share our values-whether
+                        you're
+                        looking for a great place to spend a few years while at school, or seeking a long-term career
+                        with
+                        growth
+                        potential. There's a reason many of our management members started as part-time servers, cooks
+                        or
+                        hosts.</p>
+                </div>
+            </div>
+            <div class="bg_image_container">
+                <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/792357da-ae30-4538-ad69-beac139ceca8.png" -->
+                <!-- alt="bottom marketing banner"> -->
+            </div>
         </div>
 
     </main>
