--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -11,21 +11,35 @@
 
 <body>
     <header id="header">
-        <div id="spacer"></div>
-        <a id="logo-container" href="../index.html"><img class="logo" src="../images/opplogo.png"
-                alt="Okotoks Pizza Logo"></a>
-        <div id="nav">
-            <img id="menu-icon" src="../images/menu.png" alt="menu select icon">
-            <input class="toggle" type="checkbox">
+
+        <a href="../index.html"><img class="logo" src="../images/opplogo.png" alt="Okotoks Pizza logo"></a>
+
+        <div id="header_menu_container">
+            <a id="menu_close" href="#">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </a>
             <nav class="nav">
                 <a href="../pages/Menu.html">Menu</a>
                 <a href="#">About Us</a>
                 <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
-                <a href="AboutUs.html#contact">Contact Us</a>
-                <a href="AboutUs.html#maps">Location</a>
             </nav>
+
+            <div id="menu_info">
+                <p>OPEN EVERYDAY</p>
+                <p>12pm - 10:30pm </p>
+                <a target="_blank" href="https://google.com/maps/?q=Savona's+Pizza,+Calgary,+AB+T2E+2S2">1601c Centre St NW</a>
+                <a href="tel: 4035555555">403.555.5555</a>
+            </div>
         </div>
 
+        <a id="menu_icon" href="#header_menu_container">
+            <div></div>
+            <div></div>
+            <div></div>
+        </a>
     </header>
 
     <a id="up" href="#header"><img src="../images/up-arrow-circle.png" alt="up arrow icon"></a>
@@ -50,13 +64,13 @@
                 <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/b1ab8a73-ebac-41a8-bb7a-98c373235a4e.jpg"
                     alt="Photo of Okotoks Pizza owner">
             </article>
+        </div>
+
+        <div class="recipe_container">
             <div class="bg_image_container">
                 <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/bc3ce265-e604-4d5f-9aeb-c4aab7a32855.JPG"
                     alt="commercial dough mixer with dough inside"> -->
             </div>
-        </div>
-
-        <div class="recipe_container">
             <article>
                 <div>
                     <h3>RECIPE WITH ROOTS</h3>
@@ -76,10 +90,10 @@
                 <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/c08a2d60-0857-47a1-b190-3ab4936ead94.jpg"
                     alt="old photo of Okotoks Pizza owner when he was younger">
             </article>
-            <div class="bg_image_container">
+            <!-- <div class="bg_image_container">
                 <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=960,height=960,fit=scale-down,format=auto,quality=60/zeaxdpym/2625f15d-b1a7-411b-bf78-706aeb265e9c.JPG" -->
-                <!-- alt="picture of raw cookie dough in egg shaped lumps"> -->
-            </div>
+            <!-- alt="picture of raw cookie dough in egg shaped lumps"> -->
+        </div> -->
         </div>
 
         <div class="kitchen_container">
@@ -92,12 +106,14 @@
                         allowfullscreen></iframe>
                 </div>
                 <div>
-                <h3>OUR SCRATCH KITCHEN!</h3>
-                <p>This is our Okotoks Pizza's Family Kitchen, or better known as our scratch kitchen. It's where it ALL
-                    happens...sauce, dough, desserts. We make it here and then we deliver it to all 5 locations. This
-                    helps
-                    to insure the same great taste and quality at all our locations.</p>
-                </div>    
+                    <h3>OUR SCRATCH KITCHEN!</h3>
+                    <p>This is our Okotoks Pizza's Family Kitchen, or better known as our scratch kitchen. It's where it
+                        ALL
+                        happens...sauce, dough, desserts. We make it here and then we deliver it to all 5 locations.
+                        This
+                        helps
+                        to insure the same great taste and quality at all our locations.</p>
+                </div>
             </article>
             <div class="bg_image_container">
                 <!-- <img src="https://images.unsplash.com/photo-1599875953199-2b39f58d106a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=773&q=80" -->
