changed the color format of the website. Havent chosen a color yet

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <a class="address" href="#maps">
                 1601c Centre St NW
             </a>
+            <a class="phone" href="tel:5555555555">Call Us!<img src="images/phone.png" alt="phone icon"></a>
             <nav>
                 <a href="pages/Menu.html">OUR MENU</a>
                 <a href="pages/AboutUs.html">ABOUT US</a>
