--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -30,7 +30,8 @@
             <div id="menu_info">
                 <p>OPEN EVERYDAY</p>
                 <p>12pm - 10:30pm </p>
-                <a target="_blank" href="https://google.com/maps/?q=Savona's+Pizza,+Calgary,+AB+T2E+2S2">1601c Centre St NW</a>
+                <a target="_blank" href="https://google.com/maps/?q=Savona's+Pizza,+Calgary,+AB+T2E+2S2">1601c Centre St
+                    NW</a>
                 <a href="tel: 4035555555">403.555.5555</a>
             </div>
         </div>
@@ -45,8 +46,10 @@
     <a id="up" href="#header"><img src="../images/up-arrow-circle.png" alt="up arrow icon"></a>
 
     <main>
-        <img src="https://popmenucloud.com/cdn-cgi/image/width=1200,height=1200,fit=scale-down,format=auto,quality=60/zeaxdpym/2977d71d-d4fe-4e10-afb9-4825d476f2e8.jpg"
-            alt="family of Okotoks Pizza owners">
+        <div class="family_hero">
+            <img src="https://popmenucloud.com/cdn-cgi/image/width=1200,height=1200,fit=scale-down,format=auto,quality=60/zeaxdpym/2977d71d-d4fe-4e10-afb9-4825d476f2e8.jpg"
+                alt="family of Okotoks Pizza owners">
+        </div>
         <div class="history_container">
             <article>
                 <div>
@@ -64,13 +67,13 @@
                 <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/b1ab8a73-ebac-41a8-bb7a-98c373235a4e.jpg"
                     alt="Photo of Okotoks Pizza owner">
             </article>
-        </div>
-
-        <div class="recipe_container">
             <div class="bg_image_container">
                 <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/bc3ce265-e604-4d5f-9aeb-c4aab7a32855.JPG"
                     alt="commercial dough mixer with dough inside"> -->
             </div>
+        </div>
+
+        <div class="recipe_container">
             <article>
                 <div>
                     <h3>RECIPE WITH ROOTS</h3>
@@ -90,10 +93,10 @@
                 <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/c08a2d60-0857-47a1-b190-3ab4936ead94.jpg"
                     alt="old photo of Okotoks Pizza owner when he was younger">
             </article>
-            <!-- <div class="bg_image_container">
+            <div class="bg_image_container">
                 <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=960,height=960,fit=scale-down,format=auto,quality=60/zeaxdpym/2625f15d-b1a7-411b-bf78-706aeb265e9c.JPG" -->
-            <!-- alt="picture of raw cookie dough in egg shaped lumps"> -->
-        </div> -->
+                <!-- alt="picture of raw cookie dough in egg shaped lumps"> -->
+            </div>
         </div>
 
         <div class="kitchen_container">
