--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -22,16 +22,17 @@
                 <div></div>
             </a>
             <nav class="nav">
-                <a href="../pages/Menu.html">Menu</a>
-                <a href="#">About Us</a>
+                <a href="#">Menu</a>
+                <a href="AboutUs.html">About Us</a>
                 <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
             </nav>
 
             <div id="menu_info">
                 <p>OPEN EVERYDAY</p>
                 <p>12pm - 10:30pm </p>
-                <a target="_blank" href="https://google.com/maps/?q=Savona's+Pizza,+Calgary,+AB+T2E+2S2">1601c Centre St
+                <a id="map_glink" target="_blank" href="https://google.com/maps/?q=Savona's+Pizza,+Calgary,+AB+T2E+2S2">1601c Centre St
                     NW</a>
+                    <a id="map_link" href="#map">1601c Centre St NW</a>
                 <a href="tel: 4035555555">403.555.5555</a>
             </div>
         </div>
@@ -41,9 +42,21 @@
             <div></div>
             <div></div>
         </a>
+
+        <article id="map">
+            <a id="close" href="#"><p>x</p></a>        
+            <div class="map_container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.2951197367242!2d-114.06497604939513!3d51.066101979464705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371651d74b117ad%3A0x57cb1e8bec746d21!2sSavona%E2%80%99s%20Pizza!5e0!3m2!1sen!2sca!4v1635006715361!5m2!1sen!2sca"
+                style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
+            
+        </div>
+        <a id="bg_close" href="#"></a>
+        </article>
     </header>
 
-    <a id="up" href="#header"><img src="../images/up-arrow-circle.png" alt="up arrow icon"></a>
+    <a id="up" href="#"><img src="../images/up-arrow-circle.png" alt="up arrow icon"></a>
 
     <main>
         <div class="family_hero">
@@ -102,12 +115,13 @@
         <div class="kitchen_container">
             <article>
                 <div class="youtube">
-                    <iframe src="https://www.youtube-nocookie.com/embed/Vu9cWMQ9sWg?controls=0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/xbHbcmQIcAQ?controls=0"
                         style="width:100%;height:100%;" title="YouTube video player" frameborder="0" height="100%"
                         width="100%"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
+
                 <div>
                     <h3>OUR SCRATCH KITCHEN!</h3>
                     <p>This is our Okotoks Pizza's Family Kitchen, or better known as our scratch kitchen. It's where it
@@ -182,13 +196,17 @@
                         hosts.</p>
                 </div>
             </div>
-            <div class="bg_image_container">
+            <!-- <div class="bg_image_container">
                 <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/792357da-ae30-4538-ad69-beac139ceca8.png" -->
                 <!-- alt="bottom marketing banner"> -->
-            </div>
+            <!-- </div>  -->
         </div>
 
     </main>
+
+    <footer>
+        <p>© 2021 Okotoks Pizza. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
