Created the skeleton of a new project

--- a/index.html
+++ b/index.html
@@ -2,64 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Delicious, locally sourced, farm to table pizza in the heart of Okotoks.">
-    <meta name="keywords" content="pizza, delicious, okotoks, Restaurant, Modern">
-    <meta name="author" content="Okotoks Pizza">
-
-    <meta property='og:title' content="Okotoks Pizza">
-    <meta property='og:description' content="Delicious, locally sourced, farm to table pizza in the heart of Okotoks">
-    <meta property='og:image' content="../image/opplogo.png" alt="Logo of Okotoks Pizza">
-
-
-
-    <title>Okotoks Pizza</title>
-    <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>grid mosaic[D[D[D[D[D[D[D[_</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="bg_images">
-        <img src="https://images.unsplash.com/photo-1531664767453-dc714de6b3c4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1770&q=80"
-            alt="candid photo of pizza counter">
-        <img src="https://images.unsplash.com/photo-1489564239502-7a532064e1c2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80"
-            alt="stone pizze oven with burning wood inside and serving plates on the side">
-        <img src="https://images.unsplash.com/photo-1607207504006-89723ee11236?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80"
-            alt="circular pizza dough on a wooden cutting board">
-        <img src="https://images.unsplash.com/photo-1527224538127-2104bb71c51b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=871&q=80"
-            alt="neon eat sign with brick wall brackdrop">
-    </div>
-    <div class="body">
 
-        <div>
-            <img class="logo" src="images/opplogo.png" alt="Okotoks Pizza Logo">
-            <p>We are open for Indoor & Outdoor dining</p>
-            <p>Takeout & Delivery</p>
-            <p>HOURS OF OPERATIONS</p>
-            <p>12pm - 10:30pm </p>
-            <a class="address" href="#maps">
-                1601c Centre St NW
-            </a>
-            <a class="phone" href="tel:5555555555">Call Us!<img src="images/phone.png" alt="phone icon"></a>
-            <nav>
-                <a href="pages/Menu.html">OUR MENU</a>
-                <a href="pages/AboutUs.html">ABOUT US</a>
-            </nav>
-        </div>
-    </div>
-
-    <article id="maps">
-        <a id="close" href="#">x</a>        
-        <div class="map_container">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.2951197367242!2d-114.06497604939513!3d51.066101979464705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371651d74b117ad%3A0x57cb1e8bec746d21!2sSavona%E2%80%99s%20Pizza!5e0!3m2!1sen!2sca!4v1635006715361!5m2!1sen!2sca"
-            style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
-        
-    </div>
-    <a id="bg_close" href="#"></a>
-    </article>
 </body>
 
 </html>
