disabled phone clicking for >tablet size, removed some color to simplify the look

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -24,7 +24,7 @@
             <nav class="nav">
                 <a href="#">Menu</a>
                 <a href="AboutUs.html">About Us</a>
-                <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
+                <a target="_blank" href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
             </nav>
 
             <div id="menu_info">
