--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -22,9 +22,9 @@
                 <div></div>
             </a>
             <nav class="nav">
-                <a href="#">Menu</a>
-                <a href="AboutUs.html">About Us</a>
-                <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
+                <a href="Menu.html">Menu</a>
+                <a href="#">About Us</a>
+                <a target="_blank" href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
             </nav>
 
             <div id="menu_info">
