styled promotional banner. menu

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -68,7 +68,9 @@
     
     <div class="promotional_banner">
         <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="beautiful pizza on a wooden cutting board">
-        <h1 class="promo">Take advantage of our 50% off all pizzas after 9:30PM</h1>
+        <h1 class="promo">
+            <p>Everyday. After&nbsp;9:30pm. All&nbsp;Pizzas. HALF&#8209;OFF!</p>
+         </h1>
     </div>
 
     <div class="menu_container">
