changed the fr[3ormat of desktop header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <p>HOURS OF OPERATIONS</p>
             <p>12pm - 10:30pm </p>
             <a class="address" href="#maps">
-                1601c Centre St NW
+                <p>1601c Centre St NW</p>
+                <img class="location_pin" src="../images/white_location_pin.png" alt="location pin icon">
             </a>
             <a class="phone" href="tel:5555555555">
                 <p> Call Us!</p>
