changed spacing for prices of pizza and calzone to make it easier to read

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -250,7 +250,7 @@
 
         <div class="pizza_container">
             <div class="price_container">
-                <h2 class="price">Personal 9.85 / Small 15.50 / Medium 20.95 / Large 25.95 / Gluten-free 15.50</h2>
+                <h2 class="price">&nbsp;&nbsp;Personal&nbsp;9.85&nbsp;&nbsp; &nbsp;&nbsp;Small&nbsp;15.50&nbsp;&nbsp; &nbsp;&nbsp;Medium&nbsp;20.95&nbsp;&nbsp; &nbsp;&nbsp;Large&nbsp;25.95&nbsp;&nbsp; &nbsp;&nbsp;Gluten&#8209;free&nbsp;15.50&nbsp;&nbsp;</h2>
             </div>
             <div class="food pizza">
                 <div class="shell">
@@ -447,7 +447,7 @@
 
         <div class="calzone_container">
             <div class="price_container">
-                <h2 class="price">Personal 7.25 / Small 11.50 / Medium 15.50 / Large 19.75</h2>
+                <h2 class="price">&nbsp;&nbsp;Personal&nbsp;7.25&nbsp;&nbsp; &nbsp;&nbsp;Small&nbsp;11.50&nbsp;&nbsp; &nbsp;&nbsp;Medium&nbsp;15.50&nbsp;&nbsp; &nbsp;&nbsp;Large&nbsp;19.75&nbsp;&nbsp;</h2>
             </div>
             <div class="food calzone">
                 <div class="shell">
