--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -19,7 +19,7 @@
 <body>
     <header id="header">
 
-        <a href="../index.html"><img class="logo" src="../images/opplogo.png" alt="Okotoks Pizza logo"></a>
+        <a class="logo" href="../index.html"><img src="../images/opplogo.png" alt="Okotoks Pizza logo"></a>
 
         <div id="header_menu_container">
             <a id="menu_close" href="#">
@@ -31,16 +31,24 @@
             <nav class="nav">
                 <a href="Menu.html">Menu</a>
                 <a href="#">About Us</a>
-                <a target="_blank" href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
+                <a target="_blank"
+                    href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
             </nav>
 
             <div id="menu_info">
                 <p>OPEN EVERYDAY</p>
                 <p>12pm - 10:30pm </p>
-                <a id="map_glink" target="_blank" href="https://google.com/maps/?q=Savona's+Pizza,+Calgary,+AB+T2E+2S2">1601c Centre St
+                <a id="map_glink" target="_blank"
+                    href="https://google.com/maps/?q=Savona's+Pizza,+Calgary,+AB+T2E+2S2">1601c Centre St
                     NW</a>
-                    <a id="map_link" href="#map">1601c Centre St NW</a>
-                <a href="tel: 4035555555">403.555.5555</a>
+                <a id="map_link" href="#map">
+                    <p>1601c Centre St NW</p>
+                    <img class="location_pin" src="../images/white_location_pin.png" alt="location pin icon">
+                </a>
+                <a class="phone" href="tel:5555555555">
+                    <p>403.555.5555</p>
+                    <img src="../images/phone.png" alt="phone icon">
+                </a>
             </div>
         </div>
 
@@ -51,15 +59,17 @@
         </a>
 
         <article id="map">
-            <a id="close" href="#"><p>x</p></a>        
+            <a id="close" href="#">
+                <p>x</p>
+            </a>
             <div class="map_container">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.2951197367242!2d-114.06497604939513!3d51.066101979464705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371651d74b117ad%3A0x57cb1e8bec746d21!2sSavona%E2%80%99s%20Pizza!5e0!3m2!1sen!2sca!4v1635006715361!5m2!1sen!2sca"
-                style="border:0;" allowfullscreen="" loading="lazy">
-            </iframe>
-            
-        </div>
-        <a id="bg_close" href="#"></a>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.2951197367242!2d-114.06497604939513!3d51.066101979464705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371651d74b117ad%3A0x57cb1e8bec746d21!2sSavona%E2%80%99s%20Pizza!5e0!3m2!1sen!2sca!4v1635006715361!5m2!1sen!2sca"
+                    style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+
+            </div>
+            <a id="bg_close" href="#"></a>
         </article>
     </header>
 
