evened out spacing between elements

--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -86,13 +86,19 @@
                     <h3>HISTORY</h3>
                     <p>Ken and Elaine Spinato opened their first pizzeria after moving from Chicago to Phoenix with
                         their
-                        infant daughter Nicole in 1974. Within a year, their son Anthony was born. Over the next 40
+                        infant daughter Nicole in 1974. Within a year, their son Anthony was born.
+                        
+                        <img class="float_image" src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/b1ab8a73-ebac-41a8-bb7a-98c373235a4e.jpg"
+                            alt="Photo of Okotoks Pizza owner">
+                        <img class="paragraph_break" src="../images/oregano.png" alt="oregano leaves">
+                        Over the next 40
                         years,
-                        Spinato's grew through word-of-mouth thanks to our authentic Italian flavors and family
+                        Okotoks Pizza grew through word-of-mouth thanks to our authentic Italian flavors and family
                         atmosphere.
                         Every guest was (and still is) treated like a member of the family, focusing on the guest to
                         provide
-                        the food and the ambiance that inspired a family legacy.</p>
+                        the food and the ambiance that inspired a family legacy.
+                    </p>
                 </div>
                 <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/b1ab8a73-ebac-41a8-bb7a-98c373235a4e.jpg"
                     alt="Photo of Okotoks Pizza owner">
@@ -110,12 +116,19 @@
                     <p>Since 1974, our family has been Growing Good together by cooking together, challenging each
                         other's
                         dishes, and constantly experimenting and innovating.
-
                         We don't just pass down the last generation's secrets; each generation improves upon them in our
-                        Family Kitchen. We love sharing our family favorites and invite you to do the same. With you in
+                        Family Kitchen.
+                        <img class="float_image" src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/c08a2d60-0857-47a1-b190-3ab4936ead94.jpg"
+                    alt="old photo of Okotoks Pizza owner when he was younger">
+                        <img class="paragraph_break" src="../images/tomato.png" alt="half of a tomato">
+                        We love sharing our family favorites and invite you to do the same.
+                        With you in
                         mind, our family has been working with recipes to create something that everyone at the table
                         can
-                        enjoy. Come join the new generation of Okotoks's pizza makers in our mission of providing
+                        enjoy.
+
+                        <img class="paragraph_break" src="../images/basil.png" alt="basil leaves">
+                        Come join the new generation of Okotoks's pizza makers in our mission of providing
                         exceptional food and service for our community to build memories! We can't wait to connect with
                         you!
                     </p>
@@ -215,7 +228,7 @@
             </div>
             <!-- <div class="bg_image_container">
                 <!-- <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/792357da-ae30-4538-ad69-beac139ceca8.png" -->
-                <!-- alt="bottom marketing banner"> -->
+            <!-- alt="bottom marketing banner"> -->
             <!-- </div>  -->
         </div>
 
